openldap/phpldapadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin-deploy-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin-dev
  template:
    metadata:
      labels:
        app: phpldapadmin-dev
    spec:
      containers:
        -
          name: phpldapadmin-dev
          image: osixia/phpldapadmin:0.7.1
          ports:
            - containerPort: 80
