openldap/phpldapadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin-service-dev
spec:
  type: ClusterIP
  selector:
    app: phpldapadmin-dev
  ports:
    -
      name: http
      protocol: TCP
      port: 80
      targetPort: 80
