openldap/phpldapadmin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: "ca-issuer"
  name: ingress-phpldapadmin
spec:
  rules:
  - host: openldap.zdgt.com
    http:
      paths:
      - backend:
          serviceName: phpldapadmin-service-dev
          servicePort: 80
        path: /
  tls:
  - hosts:
    - openldap.zdgt.com
    secretName: openldap-tls
